# docs/swagger.json
@@ -51,7 +51,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.RefCode"
+                            "$ref": "#/definitions/models.User"
                         }
                     }
                 }
@@ -102,7 +102,29 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.RefCode"
+                            "$ref": "#/definitions/models.CodeUsed"
+                        }
+                    }
+                }
+            }
+        },
+        "/tracking/:address": {
+            "get": {
+                "description": "Tracking code.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Tracking"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.User"
                         }
                     }
                 }
@@ -110,7 +132,30 @@
         }
     },
     "definitions": {
-        "models.RefCode": {
+        "models.CodeUsed": {
+            "type": "object",
+            "properties": {
+                "address": {
+                    "type": "string"
+                },
+                "created": {
+                    "type": "string"
+                },
+                "domain": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "price": {
+                    "type": "number"
+                },
+                "referral_code": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.User": {
             "type": "object",
             "properties": {
                 "address": {
@@ -122,8 +167,23 @@
                 "created": {
                     "type": "string"
                 },
-                "refcode": {
+                "id": {
                     "type": "integer"
+                },
+                "last_updated": {
+                    "type": "string"
+                },
+                "level": {
+                    "type": "string"
+                },
+                "rate": {
+                    "type": "number"
+                },
+                "referral_code": {
+                    "type": "string"
+                },
+                "withdraw_available": {
+                    "type": "number"
                 }
             }
         }
